syntax = "proto3";

package pb;
option go_package = "./;pb";
option csharp_namespace = "Pb"; // 给 C# 提供的选项

// 服务器人数超载
message ServerOverload {}

// 心跳
message Heartbeat {
  int64 timestamp = 1; // 服务器当前时间戳，秒级
}

// 登录方式
enum LoginMode {
  UNKNOWN_MODE = 0; // 未知登录方式
  WECHAT = 1;       // 微信
  VISITOR = 2;      // 游客
}

// 用户性别
enum UserSex {
  UNKNOWN_SEX = 0; // 未知性别
  MALE = 1;        // 男性
  FEMALE = 2;      // 女性
}

// 用户信息
message UserInfo {
  uint32 uid = 1;           // uid
  string nickname = 2;      // 昵称
  uint32 sex = 3;           // 性别 0:未知 1:男性 2:女性
  string avatar = 4;        // 头像
  string mobile = 5;        // 手机号
  uint32 from_id = 6;       // 投放渠道ID
  string lastlogin_at = 7;  // 最近一次登录时间
  uint32 reg_from_task = 8; // 用户在第几期注册
  string id_no = 9;         // 用户身份证号码
  uint32 is_realname = 10;  // 是否实名 0: 否 1: 是
  string created_at = 11;   // 注册时间
}

// 登录请求
message LoginRequest {
  uint32 mode = 1;  // 登录方式，1:微信 2:游客
  uint32 uid = 2;   // 用户uid
  string token = 3; // 登录凭证
}

// 登录响应
message LoginResponse {
  uint32 code = 1;        // 响应码，0:成功 >=1:错误码
  UserInfo user_info = 2; // 用户信息
}

// token 校验
message TokenAuth {
  uint32 code = 1; // 响应码，0:成功 >=1:错误码
}
