syntax = "proto3";

package pb;
option go_package = "./;pb";

enum MsgID {
  UNKNOW = 0;
  HEARTBEAT = 1; // 心跳
  LOGIN = 2;     // 登录
}
